--- a/Game/Game/View/CustomizeCharacter.xaml
+++ b/Game/Game/View/CustomizeCharacter.xaml
@@ -20,21 +20,15 @@
         <Label Grid.Row="0" Grid.Column="1" Content="Select a Character" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" FontFamily="/Trick Or Treat;component/View/Fonts/#Hallowen Inline"></Label>
         <Button Grid.Row="2" Grid.Column="0" x:Name="back" Content="Back" HorizontalAlignment="Left" Margin="126,0,0,10.4" VerticalAlignment="Bottom" FontFamily="/Trick Or Treat;component/View/Fonts/#Hallowen Inline" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" RenderTransformOrigin="0.864,-0.714" Foreground="White" Click="back_Click" />
 
+        <Image Source="Skins/Adventure.png"  Height="160" Margin="0,28,0,46" Grid.Row="1"></Image>
+        <Button Name="Adventure" Content="Adventure"  Margin="68,0,0,208" VerticalAlignment="Bottom" FontFamily="/Trick Or Treat;component/View/Fonts/#YouMurderer BB" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" FontWeight="Bold" HorizontalAlignment="Left" Grid.Row="1" Grid.RowSpan="2" Foreground="White" Click="character_Click" />
 
-        <Button Grid.Row="1" Grid.Column="0" Name="Adventure" Background="{x:Null}" BorderBrush="black" Click="character_Click"  Height="auto" Width="400">
-            <Image Source="Skins/Adventure.png" Stretch="Fill" Height="144" Width="80"/>
-        </Button>
-        <Label Grid.Row="1" Grid.Column="0" Content="Adventure" HorizontalAlignment="center" FontFamily="/Trick Or Treat;component/View/Fonts/#Hallowen Inline" Foreground="White" ></Label>
-        <Button Grid.Row="1" Grid.Column="1" Name="Skeleton"  Background="{x:Null}" BorderBrush="Black" Foreground="#FFF60F0F" Click="character_Click" Height="auto" Width="400">
-            <!--<Image Source="Skins/Female.png" Stretch="Fill" Height="144" Width="80"/>-->
-        </Button>
-        <Label Grid.Row="1" Grid.Column="1" Content="Mario" HorizontalAlignment="center" FontFamily="/Trick Or Treat;component/View/Fonts/#Hallowen Inline" Foreground="White" ></Label>
+        <Image Source="Skins/Female.png" Grid.ColumnSpan="2" Margin="426,28,0,46" Grid.Row="1" Height="160"/>
+        <Button Name="Female" Content="Female"  Margin="79,0,0,208" VerticalAlignment="Bottom" FontFamily="/Trick Or Treat;component/View/Fonts/#YouMurderer BB" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" FontWeight="Bold" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Foreground="White" Click="character_Click"/>
 
-        <Button Grid.Row="1" Grid.Column="2" Name="Pirate"  Background="{x:Null}" BorderBrush="Black" Foreground="#FFF60F0F" Click="character_Click" Height="auto" Width="400">
-            <Image Source="Skins/Pirate.png" Stretch="Fill" Height="144" Width="80"/>
-        </Button>
-        <Label Grid.Row="1" Grid.Column="2" Content="Zombie" HorizontalAlignment="center" FontFamily="/Trick Or Treat;component/View/Fonts/#Hallowen Inline" Foreground="White" ></Label>
-
+        <Image Source="Skins/Pirate.png"  Height="160" Margin="5,28,-5,46" Grid.Row="1" Grid.Column="2"></Image>
+        <Button Name="Pirate" Content="Pirate"  Margin="78,0,0,208" VerticalAlignment="Bottom" FontFamily="/Trick Or Treat;component/View/Fonts/#YouMurderer BB" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" FontWeight="Bold" HorizontalAlignment="Left" Grid.Row="1" Grid.Column="2" Grid.RowSpan="2" Foreground="White" Click="character_Click"/>
+        
         <Grid.Background>
             <ImageBrush ImageSource="Images/Background_Menu2.jpg"></ImageBrush>
         </Grid.Background>
