--- a/Game/Game/View/Level1.xaml
+++ b/Game/Game/View/Level1.xaml
@@ -43,6 +43,28 @@
             <Image Source="Images/tree_part3.png" Canvas.Left="220" Canvas.Top="382"/>
             <Image Source="Images/tree_part4.png" Canvas.Left="201" Canvas.Top="311" IsEnabled="False" Panel.ZIndex="1"/>
 
+            <!--GraveYard-->
+            <Image Source="Images/LevelProps/Tube_Stone.png" Canvas.Left="1155" Canvas.Top="612" IsEnabled="False"/>
+            <Image Source="Images/LevelProps/Tube_Stone.png" Canvas.Left="1193" Canvas.Top="612" IsEnabled="False"/>
+            <Image Source="Images/LevelProps/Tube_Stone.png" Canvas.Left="1231" Canvas.Top="612" IsEnabled="False"/>
+            <Image Source="Images/LevelProps/Tube_Stone.png" Canvas.Left="1155" Canvas.Top="651" IsEnabled="False"/>
+            <Image Source="Images/LevelProps/Tube_Stone.png" Canvas.Left="1193" Canvas.Top="651" IsEnabled="False"/>
+            <Image Source="Images/LevelProps/Tube_Stone.png" Canvas.Left="1231" Canvas.Top="651" IsEnabled="False"/>
+            <Image Source="Images/LevelProps/Tube_Stone.png" Canvas.Left="1118" Canvas.Top="651" IsEnabled="False"/>
+            <Image Source="Images/LevelProps/Tube_Stone.png" Canvas.Left="1118" Canvas.Top="612" IsEnabled="False"/>
+
+            <!--DeadBody's-->
+            <Image Source="Images/LevelProps/DeadBody.png" Canvas.Left="1027" Canvas.Top="360" IsEnabled="False" Height="37" Width="37" Panel.ZIndex="2"/>
+            <Image Source="Images/LevelProps/DeadBody.png" Canvas.Left="887" Canvas.Top="223" IsEnabled="False" Height="37" Width="37" Panel.ZIndex="2"/>
+
+            <!--Pumpkin's House1-->
+            <Image Source="Images/LevelProps/Pumpkin_1.png" Canvas.Left="252" Canvas.Top="242" IsEnabled="False" Height="14" Width="14"/>
+            <Image Source="Images/LevelProps/Pumpkin_1.png" Canvas.Left="181" Canvas.Top="242" IsEnabled="False" Height="14" Width="14"/>
+            <Image Source="Images/LevelProps/Pumpkin_1.png" Canvas.Left="252" Canvas.Top="228" IsEnabled="False" Height="14" Width="14"/>
+            <Image Source="Images/LevelProps/Pumpkin_1.png" Canvas.Left="181" Canvas.Top="228" IsEnabled="False" Height="14" Width="14" RenderTransformOrigin="-3.679,-0.5"/>
+            <!--Pumpkin's House2-->
+            <Image Source="Images/LevelProps/Pumpkin_1.png" Canvas.Left="502" Canvas.Top="242" IsEnabled="False" Height="14" Width="14"/>
+            <Image Source="Images/LevelProps/HalloweenCat.png" Canvas.Left="574" Canvas.Top="240" IsEnabled="False" Height="16" Width="16" Panel.ZIndex="2"/>
 
         </Canvas>
 
