Fences toegevoegd, kaarsen en collisie gegeven

--- a/Game/Game/View/Level1.xaml
+++ b/Game/Game/View/Level1.xaml
@@ -66,12 +66,26 @@
             <Image Source="Images/LevelProps/Pumpkin_1.png" Canvas.Left="502" Canvas.Top="242" IsEnabled="False" Height="14" Width="14"/>
             <Image Source="Images/LevelProps/HalloweenCat.png" Canvas.Left="574" Canvas.Top="240" IsEnabled="False" Height="16" Width="16" Panel.ZIndex="2"/>
 
-            <!--water
-            <Image Source="Images/LevelProps/water_corner.png" Canvas.Top="516" IsEnabled="False" Height="188" Width="387" Canvas.Left="-31"/>-->
+            <!--Fences-->
+            <!--<Image Source="Images/LevelProps/water_corner.png" Canvas.Top="516" IsEnabled="False" Height="188" Width="387" Canvas.Left="-31"/>-->
+            <Image Source="Images/LevelProps/fence_1.png" Canvas.Top="487" IsEnabled="True" Height="29" Width="124" Canvas.Left="201"/>
+            <Image Source="Images/LevelProps/fence_2.png" Canvas.Top="506" IsEnabled="True" Height="123" Width="20" Canvas.Left="320"/>
+            <Image Source="Images/LevelProps/fence_2.png" Canvas.Top="620" IsEnabled="True" Height="123" Width="20" Canvas.Left="320"/>
+            <Image Source="Images/LevelProps/fence_1.png" IsEnabled="True" Canvas.Left="-53" Canvas.Top="491"/>
+            <Image Source="Images/LevelProps/fence_1.png" IsEnabled="True" Canvas.Left="73" Canvas.Top="491"/>
 
+            <!--Candel's-->
+            <Image Name="candle1" Source="Images/LevelProps/candle.png" Canvas.Top="552" IsEnabled="False" Height="25" Width="15" Canvas.Left="363" RenderTransformOrigin="0.262,0.711"/>
+            <Image Name="candle2" Source="Images/LevelProps/candle.png" Canvas.Top="552" IsEnabled="False" Height="25" Width="15" Canvas.Left="877" RenderTransformOrigin="0.262,0.711"/>
+            <Image Name="candle3" Source="Images/LevelProps/candle.png" Canvas.Top="552" IsEnabled="False" Height="25" Width="15" Canvas.Left="606" RenderTransformOrigin="0.262,0.711"/>
+            <Image Name="candle4" Source="Images/LevelProps/candle.png" Canvas.Top="552" IsEnabled="False" Height="25" Width="16" Canvas.Left="1078" RenderTransformOrigin="0.262,0.711"/>
+            <Image Name="candle5" Source="Images/LevelProps/candle.png" Canvas.Top="653" IsEnabled="False" Height="25" Width="15" Canvas.Left="1019" RenderTransformOrigin="0.262,0.711"/>
+            <Image Name="candle6" Source="Images/LevelProps/candle.png" Canvas.Top="367" IsEnabled="False" Height="25" Width="15" Canvas.Left="1078" RenderTransformOrigin="0.262,0.711"/>
+            <Image Name="candle7" Source="Images/LevelProps/candle.png" Canvas.Top="231" IsEnabled="False" Height="25" Width="15" Canvas.Left="620" RenderTransformOrigin="0.262,0.711"/>
+            <Image Name="candle8" Source="Images/LevelProps/candle.png" Canvas.Top="231" IsEnabled="False" Height="25" Width="15" Canvas.Left="1216" RenderTransformOrigin="0.262,0.711"/>
         </Canvas>
 
-
+        <!--pauze menu-->
         <Rectangle x:Name="pausemenu" Fill="#FF595959" Opacity="0"></Rectangle>
         <Rectangle x:Name="gameOver" Fill="#FF595959" Opacity="0"></Rectangle>
 
@@ -84,9 +98,8 @@
         <Button x:Name="exit" Content="Exit" Width="208" FontFamily="/MovementTest;component/#YouMurderer BB" FontSize="54" HorizontalAlignment="Center" VerticalAlignment="Top" Visibility="Hidden" Click="exit_Click" Margin="533,277,539,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="DarkRed"/>
         <Button x:Name="TempWinButton" Content="Button" HorizontalAlignment="Left" Margin="106,291,0,0" VerticalAlignment="Top" Width="94" Click="TempWinButton_Click"/>
 
-
         <Grid.Background>
-            <ImageBrush ImageSource="Images\Level1.png"></ImageBrush>
+            <ImageBrush ImageSource="Images\Level1v2.png"></ImageBrush>
         </Grid.Background>
     </Grid>
 </Window>
