--- a/Game/Game/View/Level1.xaml
+++ b/Game/Game/View/Level1.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Level1" Height="704" Width="1280"  WindowStartupLocation="CenterScreen" WindowState="Normal" WindowStyle="None" ResizeMode="NoResize" Loaded="Window_Loaded">
     <Grid>
-        
+
 
         <Canvas x:Name="level1">
             <Image Source="Images/Player_House_Part1.png" Canvas.Left="144" Canvas.Top="75" Height="117" Width="161" />
@@ -105,8 +105,9 @@
         <TextBlock x:Name="lblHighscore" Visibility="Visible" HorizontalAlignment="Center" FontFamily="/Trick Or Treat;component/View/Fonts/#YouMurderer BB" TextWrapping="Wrap" Text="Highscore: " VerticalAlignment="Top" FontSize="48"  Foreground="DarkRed"/>
         <TextBlock x:Name="lblScore" Visibility="Visible" HorizontalAlignment="Center" FontFamily="/Trick Or Treat;component/View/Fonts/#YouMurderer BB" TextWrapping="Wrap" Text="Score: 0" VerticalAlignment="Top" FontSize="48"  Foreground="DarkRed" Margin="6,0,1094,0" Width="180"/>
 
-        <Label Content="Time:" FontFamily="/Trick Or Treat;component/View/Fonts/#YouMurderer BB" HorizontalAlignment="Right" Visibility="Visible" FontSize="48" Margin="0,0,67,0" Foreground="DarkRed"></Label>
+        <Label x:Name ="lblTimer" Content="Time:" FontFamily="/Trick Or Treat;component/View/Fonts/#YouMurderer BB" HorizontalAlignment="Right" Visibility="Visible" FontSize="48" Margin="0,0,67,0" Foreground="DarkRed"></Label>
         <Label x:Name="Timer" Content="60" FontFamily="/Trick Or Treat;component/View/Fonts/#YouMurderer BB" HorizontalAlignment="Right" Visibility="Visible" FontSize="48" Foreground="DarkRed"></Label>
+        <TextBlock x:Name="lblNoHighscore" Visibility="Hidden" HorizontalAlignment="Center" FontFamily="/Trick Or Treat;component/View/Fonts/#YouMurderer BB" TextWrapping="Wrap" Text="But you didn't make the highscores" VerticalAlignment="Top" FontSize="48"  Foreground="DarkRed" Margin="375,126,331,0" Height="55" Width="574"/>
 
 
         <Grid.Background>
